--- a/general/templates/general/partials/header.html
+++ b/general/templates/general/partials/header.html
@@ -12,17 +12,17 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="{% url "home" %}" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="{% url "about" %}">About</a></li>
+          <li><a href="{% url "serv" %}">Services</a></li>
+          <li><a href="{% url "portfolio" %}">Portfolio</a></li>
+          <li><a href="{% url "team" %}">Team</a></li>
           <li><a href="{% url "blog" %}">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown </a></li>
+                  <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
@@ -34,7 +34,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href={% url "contact" %}>Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
