Improve error handling in payment module

--- a/general/templates/general/team.html
+++ b/general/templates/general/team.html
@@ -4,6 +4,7 @@
 {% include "general/partials/head.html" %}
 
 <body>
+  {% include "general/partials/pagetitle.html" %}
     {% include "general/partials/header.html" %}
     <section id="team" class="team section">
 
