--- a/general/templates/general/about.html
+++ b/general/templates/general/about.html
@@ -4,6 +4,8 @@
 {% include "general/partials/head.html" %}
 
 <body>
+  {% include "general/partials/pagetitle.html" %}
+
     {% include "general/partials/header.html" %}
     <!-- About Section -->
     <section id="about" class="about section">
