--- a/general/templates/general/contact.html
+++ b/general/templates/general/contact.html
@@ -4,6 +4,8 @@
 {% include "general/partials/head.html" %}
 
 <body>
+  {% include "general/partials/pagetitle.html" %}
+  
     {% include "general/partials/header.html" %}
 
     <!-- Contact Section -->
